# MegaAutoDinos

./: .gitignore  README.md  gaveta  loja.h  megaAutoDinos.c  pilhadinos.h
.github/workflows/: build.yml  main.yml  release.yml
source/: CMakeLists.txt  fila.h  listadinos.h  main.c  megaAutoDinos.c  pilhadinos.c  pilhadinos.h
source/include/: batalha.h  dinos.h  filadinos.h  habilidades.h  listadinos.h  loja.h  nome.h  nomegrupo.h  pilhadinos.h  titulo.h
source/pilhadinos/: CMakeLists.txt  Cmakelists.txt
